
=======
Changes
=======

0.2.0
=======================

 - remove `confclass` module, use external `configclass`
 - `install_requires` does not include requirements for all modules
    i.e. you need to manually install `pyflakes`, `coverage`,...


0.1.1 (*2014-03-23*)
=======================

 - pyflakes: consider 'unicode' a builtin even on py3 to support code
   compatible with both py2 and py3.


0.1.0 (*2014-03-22*)
=======================

 - added pyflakes module
 - added coverage module