@@ -6,6 +6,8 @@ Changes
 0.2.0
 =======================
 
+ - coverage: support coverage of single modules
+ - coverage: remove support getting a string path as a parameter
  - remove `confclass` module, use external `configclass`
  - `install_requires` does not include requirements for all modules
     i.e. you need to manually install `pyflakes`, `coverage`,...
